--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,14 @@
 *.pyd
 *.o
 
+# Setuptools distribution folder.
+/dist/
+/build/
+
+# Python egg metadata, regenerated from source files by setuptools.
+/*.egg-info
+/*.egg
+
 
 *.wav
 *.mp3
