--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,73 @@
 *.pyd
 *.o
 
+
+
+.DS_Store
+
+
+*/.DS_Store
+
+*.tar*
+out/
+ezc-dev/
+
+*.orig
+Makefile
+Makefile.in
+aclocal.m4
+ar-lib
+autom4te.cache
+compile
+config.guess
+config.log
+config.status
+config.sub
+configure
+configure.lineno
+depcomp
+install-sh
+libtool
+ltmain.sh
+missing
+chaudio.pc
+test-driver
+
+out/
+
+
+.vscode/
+
+*.out
+
+chaudioconfig.h
+
+build/
+
+*.orig
+*.o
+*.out
+
+*.tar
+*.tar.*
+
+
+autom4te.cache
+autoscan.log
+autoscan-*.log
+aclocal.m4
+compile
+config.guess
+config.h*
+config.sub
+configure
+configure.scan
+depcomp
+install-sh
+missing
+stamp-h1
+
+
 test.py
 
 # Setuptools distribution folder.
@@ -17,6 +84,8 @@ test.py
 /*.egg-info
 /*.egg
 /.eggs
+
+
 
 
 *.wav
