examples, signal gen

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,12 +6,12 @@
 
 # writing 
 add_executable(ch_write example_write.c)
-add_executable(ch_gain example_gain.c)
 add_executable(ch_plugin example_plugin.c)
+add_executable(ch_signal example_signal.c)
 
 target_link_libraries(ch_write chaudio ${CMAKE_DL_LIBS})
-target_link_libraries(ch_gain chaudio ${CMAKE_DL_LIBS})
 target_link_libraries(ch_plugin chaudio ${CMAKE_DL_LIBS})
+target_link_libraries(ch_signal chaudio ${CMAKE_DL_LIBS})
 
 
 
