--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,17 +1,23 @@
-#FILE(GLOB examples "${CMAKE_CURRENT_SOURCE_DIR}/*.")
 
-#install (FILES ${examples} DESTINATION share/ezc/examples PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
-
-
+add_subdirectory(gain)
+add_subdirectory(delay)
 
 # writing 
-add_executable(ch_write example_write.c)
-add_executable(ch_plugin example_plugin.c)
-add_executable(ch_signal example_signal.c)
+add_executable(ch_build_info build_info.c)
+add_executable(ch_write write.c)
+add_executable(ch_signal signal.c)
+add_executable(ch_plugin plugin.c)
+add_executable(ch_extend extend.c)
+add_executable(ch_profile profile.c)
 
+target_link_libraries(ch_build_info chaudio ${CMAKE_DL_LIBS})
 target_link_libraries(ch_write chaudio ${CMAKE_DL_LIBS})
-target_link_libraries(ch_plugin chaudio ${CMAKE_DL_LIBS})
 target_link_libraries(ch_signal chaudio ${CMAKE_DL_LIBS})
+target_link_libraries(ch_plugin chaudio ${CMAKE_DL_LIBS})
+target_link_libraries(ch_extend chaudio ${CMAKE_DL_LIBS})
+target_link_libraries(ch_profile chaudio ${CMAKE_DL_LIBS})
 
+# TODO: determine best place to store utilities
+install (TARGETS ch_build_info ch_write ch_signal ch_plugin ch_extend ch_profile DESTINATION bin)
 
 
