--- a/docs/chaudio.texi.in
+++ b/docs/chaudio.texi.in
@@ -75,7 +75,7 @@ typedef struct audio_t {
 
 As noted in the comments in the above example, chaudio uses `channel major` (if you are familiar with @url{https://en.wikipedia.org/wiki/Row-_and_column-major_order, row major and column major} ordering) as opposed to `sample major`. This means that the internal audio buffer stores all @code{length} samples of channel 0, then all @code{length} samples of channel 1, and so on, rather than the sample for each channel. See this image for a visual explanation:
 
-@image{@RESOURCES@/channelmajor_vs_samplemajor,,,,png}
+@image{../channelmajor_vs_samplemajor,,,,png}
 
 This layout is preferred for primarily one reason: data caching
 
