--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_program(MAKEINFO_EXECUTABLE makeinfo)
 
-#set(RESOURCES ${CMAKE_SOURCE_DIR}/docs)
-set(RESOURCES https://github.com/ChemicalDevelopment/chaudio/raw/master/docs)
+set(RESOURCES ../docs)
+#set(RESOURCES https://github.com/ChemicalDevelopment/chaudio/raw/master/docs)
 
 configure_file (
   "./chaudio.texi.in"
@@ -14,7 +14,7 @@ set(html_out ${CMAKE_CURRENT_BINARY_DIR}/index.html)
 
 
 add_custom_command(OUTPUT ${html_out}
-  COMMAND ${MAKEINFO_EXECUTABLE} --no-split --fill-column=40 --html -o ${html_out} ${info_in}
+  COMMAND ${MAKEINFO_EXECUTABLE} --no-split --fill-column=40 --html -o ${html_out} ${info_in} && sed -i -e "s/\.\.\//\.\//g" ${html_out}
   DEPENDS ${info_in}
   COMMENT "Creating HTML directory ${html_out}"
   VERBATIM)
