--- a/examples/delay/CMakeLists.txt
+++ b/examples/delay/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_library(delay SHARED plugin.c)
+add_library(delay SHARED delay.c)
 
 install (TARGETS delay DESTINATION share/chaudio/plugins)
 
