--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,6 @@
 
+add_subdirectory(chplug)
+
 
 set (ext_files "")
 set (ext_libs "")
@@ -9,7 +11,7 @@ if (PORTAUDIO_FOUND)
     set(ext_libs ${ext_libs} ${PORTAUDIO_LIBRARIES})
 endif()
 
-add_library(chaudio STATIC util.c    chaudio.c signal.c plugin.c pipeline.c   ${ext_files}    chaudio.h)
+add_library(chaudio STATIC util.c    chaudio.c signal.c plugin.c generator.c paraminterface.c  output.c pipeline.c   ${ext_files}    chaudio.h)
 
 target_link_libraries(chaudio m ${ext_libs} ${CMAKE_DL_LIBS})
 target_compile_options(chaudio PUBLIC -std=c99 -fpermissive -w -Wall )
