--- a/src/chplug/CMakeLists.txt
+++ b/src/chplug/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_library(chplug SHARED chplug.c)
+add_library(chplug SHARED chplug.c ast.c lex.c parser.c)
 
 install (TARGETS chplug DESTINATION lib/)
 
