added naive convolver, CHFFT with KISSFFT

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(flanger)
 add_subdirectory(signal)
 add_subdirectory(wavin)
 add_subdirectory(wavout)
+add_subdirectory(convolver)
 
 # writing 
 
@@ -17,8 +18,6 @@ add_executable(ch_build_info build_info.c)
 add_executable(ch_extend extend.c)
 add_executable(ch_profile profile.c)
 
-add_executable(ch_plug chplug.c)
-
 
 target_link_libraries(ch_build_info chaudio ${CMAKE_DL_LIBS})
 target_link_libraries(ch_write chaudio ${CMAKE_DL_LIBS})
@@ -26,8 +25,6 @@ target_link_libraries(ch_extend chaudio ${CMAKE_DL_LIBS})
 target_link_libraries(ch_profile chaudio ${CMAKE_DL_LIBS})
 target_link_libraries(ch_realtime_pipeline chaudio ${CMAKE_DL_LIBS})
 target_link_libraries(ch_pipeline chaudio ${CMAKE_DL_LIBS})
-
-target_link_libraries(ch_plug chplug chaudio ${CMAKE_DL_LIBS})
 
 
 # TODO: determine best place to store utilities
