--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,6 @@
 
 add_subdirectory(chfft)
 
-
 set (ext_files "")
 set (ext_libs "")
 
@@ -11,9 +10,12 @@ if (PORTAUDIO_FOUND)
     set(ext_libs ${ext_libs} ${PORTAUDIO_LIBRARIES})
 endif()
 
-add_library(chaudio STATIC util.c    chaudio.c signal.c plugin.c generator.c paraminterface.c  output.c pipeline.c   ${ext_files}    chaudio.h)
 
-target_link_libraries(chaudio chfft m ${ext_libs} ${CMAKE_DL_LIBS})
+set (chfft_files chfft/chfft.c chfft/kissfft/kiss_fft.c chfft/kissfft/kiss_fft.h chfft/kissfft/_kiss_fft_guts.h chfft/kissfft/kiss_fftr.h chfft/kissfft/kiss_fftr.c)
+
+add_library(chaudio STATIC util.c    chaudio.c signal.c plugin.c generator.c paraminterface.c  output.c pipeline.c ${chfft_files}  ${ext_files}    chaudio.h)
+
+target_link_libraries(chaudio m ${ext_libs} ${CMAKE_DL_LIBS})
 target_compile_options(chaudio PUBLIC -std=c99 -fpermissive -w -Wall )
 
 
